<resources>
    <string name="app_name">智慧厨房</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">HomeActivity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- home left page -->
    <string name="school_name">南京市赤壁路小学</string>
    <string name="order_list_check">订单审批</string>
    <string name="parent_recall_no">家长反馈（暂未开通）</string>
    <string name="report_message_no">报名信息（暂未开通）</string>
    <string name="passwd_modify">密码修改</string>
    <string name="about">关于</string>
    <!-- home page -->
    <string name="home_title">智慧厨房管理终端</string>
    <string name="every_day_menu">每日菜单</string>
    <string name="big_meat">大荤</string>
    <string name="small_meat">小荤</string>
    <string name="vegetable">蔬菜</string>
    <string name="fruit">水果</string>
    <string name="soup">汤</string>
    <string name="rice">饭</string>
    <string name="device_status">设备状态</string>
    <string name="people_status">人员状态</string>
    <string name="responsbility">负责人</string>
    <string name="manager_people">人员管理</string>
    <string name="mananger_device">设备管理</string>
    <string name="mananger_food">菜肴管理</string>
    <string name="mananger_order">订单管理</string>
    <string name="control_video">视频监控</string>
    <string name="save_demo">留样监控</string>

    <!-- 登陆，引导 -->
    <string name="loading_home_title">智慧厨房管理系统</string>

    <!-- 用户职业 -->
    <string name="work_id_add">ID  %s</string>
    <string name="work_tele_add">TEL  %s</string>
    <string name="work_address_add">住址  %s</string>
    <string name="work_card_add">证件到期  %s</string>

    <!-- 周推荐 -->
    <string name="today_lunch">今日午餐</string>
    <string name="dinner_push">晚餐推荐</string>
    <!-- 在线视频 -->
    <string name="real_button_photo">截图</string>
    <string name="video_storage_on">录像(开)</string>
    <string name="real_button_back">回放</string>
    <!--<string name="real_button_msg">消息(<xliff:g id="number">%1$d</xliff:g>)</string>-->
    <string name="real_button_msg">消息</string>
    <string name="real_button_voice_on">音频(开)</string>
    <string name="real_button_voice_off">音频(关)</string>
    <string name="real_button_cloud_on">云台(开)</string>
    <string name="real_button_cloud_off">云台(关)</string>
    <string name="video_storage_off">录像(关)</string>
</resources>
