<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="camlebell.com.fragment.DrawLeftFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@color/home_back"
        android:gravity="bottom"
        android:orientation="vertical"
        android:text="@string/hello_blank_fragment">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="10dp"
            android:text="@string/school_name"
            android:textColor="@android:color/white"
            android:textSize="22sp" />

        <View
            android:layout_width="200dp"
            android:layout_height="5dp"
            android:layout_gravity="bottom|left"
            android:background="@color/slide_driver_line" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:text="@string/hello_blank_fragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="10dp"
                android:text="@string/order_list_check"
                android:textColor="@color/slide_left_text"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="10dp"
                android:text="@string/parent_recall_no"
                android:textColor="@color/slide_left_text"
                android:textSize="15sp"  />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="10dp"
                android:text="@string/report_message_no"
                android:textColor="@color/slide_left_text"
                android:textSize="15sp"  />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="10dp"
                android:text="@string/passwd_modify"
                android:textColor="@color/slide_left_text"
                android:textSize="15sp"  />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="10dp"
                android:text="@string/about"
                android:textColor="@color/slide_left_text"
                android:textSize="15sp"  />

        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="10dp"
            android:background="@mipmap/power_down">
        </ImageView>
    </LinearLayout>

</LinearLayout>
