<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/driver_line"
    android:orientation="vertical"
    tools:context="camlebell.com.fragment.DrawLeftFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/driver_line"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:text="@string/hello_blank_fragment">

            <View
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:background="@android:color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/today_lunch"
                android:textColor="@color/slide_left_text"
                android:textSize="18sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/big_meat"
                android:textColor="@color/slide_left_text"
                android:textSize="14sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/small_meat"
                android:textColor="@color/slide_left_text"
                android:textSize="14sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/vegetable"
                android:textColor="@color/slide_left_text"
                android:textSize="14sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/fruit"
                android:textColor="@color/slide_left_text"
                android:textSize="14sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/soup"
                android:textColor="@color/slide_left_text"
                android:textSize="14sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="红烧肉"
                android:textColor="@color/home_back"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="花菜肉片"
                android:textColor="@color/home_back"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="耗油生菜"
                android:textColor="@color/home_back"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="苹果"
                android:textColor="@color/home_back"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="番茄菜汤"
                android:textColor="@color/home_back"
                android:textSize="16sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="12dp"
            android:layout_marginTop="20dp"
            android:background="@color/home_back" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/dinner_push"
                android:textColor="@color/slide_left_text"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/last_day" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="14-15上"
                    android:textSize="12sp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="5.11  星期四"
                    android:textSize="12sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/next_day" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/driver_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center">


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="荤菜："
                    android:textSize="12sp" />


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:paddingLeft="15dp"
                    android:text="素菜："
                    android:textSize="12sp" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@mipmap/next_day" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/driver_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center">


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="素菜："
                    android:textSize="12sp" />


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:paddingLeft="15dp"
                    android:text="14-15上"
                    android:textSize="12sp" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@mipmap/next_day" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/driver_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center">


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="主食"
                    android:textSize="12sp" />


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:paddingLeft="15dp"
                    android:text="14-15上"
                    android:textSize="12sp" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@mipmap/next_day" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/driver_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center">


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="其他："
                    android:textSize="12sp" />


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:paddingLeft="15dp"
                    android:text="14-15上"
                    android:textSize="12sp" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@mipmap/next_day" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/driver_line" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>

