<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/home_back"
        android:minHeight="?attr/actionBarSize">

        <TextView
            android:id="@+id/home_action_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:text="www.dastorm.com"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="normal" />
    </android.support.v7.widget.Toolbar>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/black"
        android:orientation="vertical">

        <TableLayout
            android:id="@+id/videoLayout2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="5dip"
            android:stretchColumns="*">

            <TableRow>

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/real_button_photo"
                        android:layout_width="60dip"
                        android:layout_height="60dip"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:background="@mipmap/real_img_photo01" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/real_button_photo"
                        android:layout_centerHorizontal="true"
                        android:text="@string/real_button_photo"
                        android:textColor="@color/white"
                        android:textSize="15sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/real_button_video"
                        android:layout_width="60dip"
                        android:layout_height="60dip"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_centerInParent="true"
                        android:background="@mipmap/real_img_video01" />

                    <TextView
                        android:id="@+id/text_video"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/real_button_video"
                        android:layout_centerHorizontal="true"
                        android:text="@string/video_storage_on"
                        android:textColor="@color/white"
                        android:textSize="15sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/real_button_back"
                        android:layout_width="60dip"
                        android:layout_height="60dip"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_centerInParent="true"
                        android:background="@mipmap/real_img_back01" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/real_button_back"
                        android:layout_centerHorizontal="true"
                        android:text="@string/real_button_back"
                        android:textColor="@color/white"
                        android:textSize="15sp" />
                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/real_button_voice"
                        android:layout_width="60dip"
                        android:layout_height="60dip"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_centerInParent="true"
                        android:background="@mipmap/real_img_voiceon" />

                    <TextView
                        android:id="@+id/real_volumn_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/real_button_voice"
                        android:layout_centerHorizontal="true"
                        android:text="@string/real_button_voice_on"
                        android:textColor="@color/white"
                        android:textSize="15sp" />
                </RelativeLayout>
            </TableRow>

            <TableRow android:layout_marginTop="10dip">

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/real_button_cloud"
                        android:layout_width="60dip"
                        android:layout_height="60dip"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_centerInParent="true"
                        android:background="@mipmap/real_img_cloud01" />

                    <TextView
                        android:id="@+id/text_cloud_tip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/real_button_cloud"
                        android:layout_centerHorizontal="true"
                        android:text="@string/real_button_cloud_on"
                        android:textColor="@color/white"
                        android:textSize="15sp" />
                </RelativeLayout>
            </TableRow>
        </TableLayout>


        <RelativeLayout
            android:id="@+id/videoLayout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_above="@id/videoLayout2"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="0dp">

            <SurfaceView
                android:id="@+id/surfaceView"
                android:layout_width="400dp"
                android:layout_height="300dp"
                android:layout_centerInParent="true"
                android:visibility="invisible" />

            <ImageView
                android:id="@+id/surfaceImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@mipmap/camera"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/realplay_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:background="@mipmap/realplay_left"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/realplay_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:background="@mipmap/realplay_right"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/realplay_bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="5dp"
                android:background="@mipmap/realplay_bottom"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/realplay_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:background="@mipmap/realplay_top"
                android:visibility="gone" />
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>